syntax = "proto3";
option csharp_namespace = "SimpleSchedulerBlazor.ProtocolBuffers.Messages.Home";
package SimpleSchedulerBlazorProtocolBuffers;

message GetEnvironmentNameRequest {
}
message GetEnvironmentNameReply {
    string EnvironmentName = 1;
}

message GetUtcNowRequest {
}
message GetUtcNowReply {
    string FormattedDateTime = 1;
}

message HelloThereRequest {
}
message HelloThereReply {
    string Message = 1;
}
